{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 101,
  "lineage": "15417825-9a33-5284-af10-0cee1ee19f3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d915f72874e92f5e",
            "arn": "arn:aws:ec2:eu-north-1:250423784534:instance/i-0795c0b673111090a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0795c0b673111090a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "task_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04ccaee2a63dc91a0"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ccaee2a63dc91a0",
            "private_dns": "ip-10-5-2-25.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.2.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05be031b679bda7b4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f31b540b57f21987",
            "tags": {
              "Name": "task-web"
            },
            "tags_all": {
              "Name": "task-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c55f232231a5020a"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_network_interface.net_interface",
            "aws_security_group.instance",
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:loadbalancer/app/task-lb/bc9cf84fda7ad307",
            "arn_suffix": "app/task-lb/bc9cf84fda7ad307",
            "desync_mitigation_mode": "defensive",
            "dns_name": "task-lb-195738847.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:loadbalancer/app/task-lb/bc9cf84fda7ad307",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-028357a089ad3b7b9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d28bb454b3b988fa"
              },
              {
                "subnet_id": "subnet-0f31b540b57f21987"
              }
            ],
            "subnets": [
              "subnet-0d28bb454b3b988fa",
              "subnet-0f31b540b57f21987"
            ],
            "tags": {
              "Name": "task-lb"
            },
            "tags_all": {
              "Name": "task-lb"
            },
            "vpc_id": "vpc-0d9869e1d4fcbf87d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:listener/app/task-lb/bc9cf84fda7ad307/9740f15a53c546d0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:targetgroup/task-targetgroup/a192732de36d6e50",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:listener/app/task-lb/bc9cf84fda7ad307/9740f15a53c546d0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:loadbalancer/app/task-lb/bc9cf84fda7ad307",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.targetgroup",
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:targetgroup/task-targetgroup/a192732de36d6e50",
            "arn_suffix": "targetgroup/task-targetgroup/a192732de36d6e50",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:targetgroup/task-targetgroup/a192732de36d6e50",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d9869e1d4fcbf87d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:targetgroup/task-targetgroup/a192732de36d6e50-20231028093030835400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:250423784534:targetgroup/task-targetgroup/a192732de36d6e50",
            "target_id": "i-0795c0b673111090a"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.targetgroup",
            "aws_network_interface.net_interface",
            "aws_security_group.instance",
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:250423784534:network-interface/eni-04ccaee2a63dc91a0",
            "attachment": [
              {
                "attachment_id": "eni-attach-00ab1843754d305a2",
                "device_index": 0,
                "instance": "i-0795c0b673111090a"
              }
            ],
            "id": "eni-04ccaee2a63dc91a0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:73:8c:63:c5:fa",
            "owner_id": "250423784534",
            "private_ip": "10.5.2.25",
            "private_ip_list": [
              "10.5.2.25"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.5.2.25"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c55f232231a5020a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f31b540b57f21987"
          },
          "dependencies": [
            "aws_security_group.instance",
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:250423784534:security-group/sg-0c55f232231a5020a",
            "description": "Access to instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c55f232231a5020a",
            "ingress": [
              {
                "cidr_blocks": [
                  "217.28.48.78/32"
                ],
                "description": "SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP/HHTPS from load balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028357a089ad3b7b9"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTP/HHTPS from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-028357a089ad3b7b9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance-sg"
            },
            "tags_all": {
              "Name": "instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9869e1d4fcbf87d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:250423784534:security-group/sg-028357a089ad3b7b9",
            "description": "Access to load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028357a089ad3b7b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb-sg"
            },
            "tags_all": {
              "Name": "elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9869e1d4fcbf87d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}